# schemadoc-differ-core

./: Cargo.toml
crates/schemadoc-diff-derive/: Cargo.toml
crates/schemadoc-diff-derive/src/: lib.rs
libs/differ-core-derive/: Cargo.toml
src/: context.rs  core.rs  lib.rs  path_pointer.rs  schema_diff.rs  schema_diff_utils.rs  stats.rs  visitor.rs
src/checker/: added_required_body_property_check.rs  added_required_parameter_check.rs  added_required_request_body_check.rs  mod.rs  removed_media_type_check.rs  removed_operation_check.rs  removed_response_property_check.rs  removed_schema_enum_value_check.rs  schema_enum_value_removed_check.rs  schema_type_changed_check.rs  updated_schema_type_check.rs
src/exporters/: markdown.rs  mod.rs
src/schemas/openapi303/: context.rs  converter.rs  schema.rs
src/schemas/openapi310/: context.rs  converter.rs  schema.rs
src/schemas/swagger2/: context.rs  converter.rs
src/visitors/: affected_operations_visitor.rs
