[package]
name = "schemadoc-differ-core"
version = "0.1.16"
edition = "2021"
authors = ["Dzmitry Bukhta <bukhta.d@gmail.com>"]
readme = "README.md"
keywords = ["openapi", "diff", "breaking", "changes"]
license = "MIT OR Apache-2.0"
autotests = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
differ-core-derive = { path = "libs/differ-core-derive" }

tracing = "0.1"

chrono = "0.4"
thiserror = "1"
once_cell = "1"
regex = "1"
auto_impl = "1.0.1"
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
indexmap = { version = "1.8.1", features = ["std", "serde"] }
serde_path_to_error = "0.1"
