[package]
name = "schemadoc-diff-derive"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "*", features = ["derive"] }
quote = "*"
proc-macro2 = "*"
r3bl_rs_utils = "*"