[package]
name = "schemadoc-diff-derive"
version = "0.1.0"
edition = "2018"
description = "Traits deriving for schemadoc-diff"
authors = ["Dzmitry Bukhta <bukhta.d@gmail.com>"]
license = "Apache-2.0"
autotests = false

[lib]
proc-macro = true

[dependencies]
syn = { version = "*", features = ["derive"] }
quote = "*"
proc-macro2 = "*"
r3bl_rs_utils = "*"